changed enemies vertical speed