@@ -1,1 +1,2 @@
 "# spaceinvaders" 
+--module-path "path\to\javafx-sdk-13\lib" --add-modules javafx.controls
